kubernetes/neo/apps/database/pgadmin/app/httproute-private.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server-private
spec:
  parentRefs:
  - name: private-gateway
    namespace: istio-gateways
  hostnames:
  - "pgadmin.${CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pgadmin
      port: 80
      weight: 100
